@@ -7,9 +7,11 @@
 
   :jvm-opts ["--add-opens=java.base/java.nio=ALL-UNNAMED"
              "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"]
+
+  :plugins [[lein-eftest "0.6.0"]]
   
   :dependencies [[datalevin "0.9.5"]
                  [comb "0.1.1"]]
 
-  :profiles {:repl {:jvm-opts ["--add-opens=java.base/java.nio=ALL-UNNAMED"
-                               "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"]}})
+  :test-paths ["test" "datalevin_surge"])
+
